# vikingdude81-Simulation-Research

./: .gitignore  .replit  ACADEMIC_RESEARCH_MOMENTUM.md  ADAPTIVE_MUTATION_GPU_ML_GUIDE.md  ADVANCED_ML_GUIDE.md  ATTENTION_ANALYSIS_SUMMARY.md  AUDIT_FIXES_SUMMARY.md  BACKTEST_RESULTS_SUMMARY.md  BACKTEST_SUMMARY.md  BASELINE_TRAINING_ANALYSIS.md  BRANCH_INFO.md  BRANCH_MIGRATION_STATUS.md  BTC_predictions_20251026_231328.csv  BTC_predictions_20251026_232309.csv  CHAT_SESSION_REFERENCE.md  COMMIT_SUMMARY.md  ENHANCED_ML_PREDICTOR_CONCEPT.md  ENHANCEMENT_COMPLETE.md  ENSEMBLE_RESULTS_SUMMARY.md  ETH_predictions_20251026_231413.csv  ETH_predictions_20251026_232352.csv  FEATURE_IMPORTANCE_FIX.md  FEATURE_ROADMAP.md  FEATURE_SELECTION_PLAN.md  FOURIER_EXPERIMENT_PLAN.md  FOURIER_INTEGRATION_ANALYSIS.md  GA_CONDUCTOR_CONCEPT.md  GA_CONDUCTOR_FOR_GOVERNMENT_SIM.md  GMA_INTEGRATION_COMPLETE.md  GPU_EXPLANATION.md  GPU_VERIFICATION_FINAL.md  GPU_vs_CPU_EXPLANATION.md  GUIDE.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  INTERACTION_FEATURES_SUMMARY.md  LSTM_IMPLEMENTATION_SUMMARY.md  MIGRATION_REPORT.md  MIGRATION_SUMMARY.md  ML_COURSE_COMPARISON.md  (+181 more)
quantum_genetics/: .replit  CHAMPION_README.md  DEEP_ANALYSIS_INSIGHTS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  FITNESS_STABILITY_ML_COMPLETE.md  INTEGRATION_GUIDE.md  MULTI_ENVIRONMENT_COMPLETE.md  NEXT_STEPS_OPTIONS.md  QUANTUM_EVOLUTION_EXPERIMENTS_COMPLETE.md  SPECIALIST_DEPLOYMENT_GUIDE.md  VISUALIZATION_GALLERY.md  adaptive_mutation_gpu_ml.py  advanced_ensemble.py  analyze_and_recommend.py  compare_champion.py  (+59 more)
(+1069 files in other folders)
