[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "mplfinance>=0.12.10b0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pycoingecko>=3.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "yfinance>=0.2.66",
]
